--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\CameraOnObjectMovement.cs" />
     <Compile Include="Assets\Scripts\MovementControllerWithCamera.cs" />
     <Compile Include="Assets\Scripts\RespawnSystem.cs" />
     <Reference Include="UnityEngine">
