fixed bugs. Added more bugs. Fixed those. Created new objects. Made Level_01

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraOnObjectMovement.cs" />
+    <Compile Include="Assets\Scripts\ConstantRespawn.cs" />
     <Compile Include="Assets\Scripts\ConstantRotation.cs" />
     <Compile Include="Assets\Scripts\MovementControllerWithCamera.cs" />
     <Compile Include="Assets\Scripts\RespawnSystem.cs" />
