--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Scripts\ConstantRotation.cs" />
     <Compile Include="Assets\Scripts\ControlTrigers.cs" />
     <Compile Include="Assets\Scripts\EndScene.cs" />
+    <Compile Include="Assets\Scripts\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\Fly.cs" />
     <Compile Include="Assets\Scripts\MovementControllerWithCamera.cs" />
     <Compile Include="Assets\Scripts\RespawnSystem.cs" />
